# kcloud

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml
docs/plan/: kloud-master-plan.md  phase-1-tools-execution.md  phase-2-planning-coordination.md  phase-3-memory-management.md  phase-4-concurrency.md  phase-5-collaboration.md
docs/plan/phase1/: README.md  step-1.1.md  step-1.10.md  step-1.11.md  step-1.12.md  step-1.13.md  step-1.14.md  step-1.15.md  step-1.16.md  step-1.17.md  step-1.18.md  step-1.19.md  step-1.2.md  step-1.3.md  step-1.4.md  step-1.5.md  step-1.6.md  step-1.7.md  step-1.8.md  step-1.9.md
scripts/: setup-pre-commit.sh
src/: cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  state.rs
src/tools/: call.rs  mod.rs  traits.rs
