[package]
name = "kloud"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A minimal Claude Code implementation in Rust"
homepage = "https://github.com/master-g/kcloud"
repository = "https://github.com/master-g/kcloud"

[workspace]
members = ["."]

[workspace.package]
edition = "2021"
rust-version = "1.75.0"

[workspace.dependencies]
# Async traits
async-trait = "0.1.89"

# CLI
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# TUI
ratatui = "0.29"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
toml = "0.8"
directories = "6.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
regex = "1.12"
walkdir = "2.5"

[workspace.lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
ptr_as_ptr = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
ref_as_ptr = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"

[dependencies]
async-trait.workspace = true
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
ratatui.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
directories.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[profile.release]
opt-level = "s"
debug = false
strip = "debuginfo"
lto = true

[profile.bench]
debug = true
